--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,6 +18,7 @@ html {
   display: flex;
   justify-content: center;
   margin-bottom: 5rem;
+  min-height: 100vh;
 }
 
 .container {
@@ -89,10 +90,7 @@ html {
   transition: color 0.2s linear 0.05s;
   border-radius: 10px;
   overflow: hidden;
-}
-
-.btn:last-child {
-  margin-left: 2.3rem;
+  margin-right: 2.3rem;
 }
 
 .btn:hover {
@@ -120,6 +118,10 @@ html {
 
 .btn--accent:hover::before {
   transform: scaleY(1);
+}
+
+.btn:first-child {
+  margin-left: 0;
 }
 
 /* product */
@@ -303,6 +305,25 @@ html {
   .container {
     padding: 0 1rem;
   }
+}
+
+.form-link {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  background-color: #006be5;
+  color: #fff;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  padding: 15px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.1s ease 0s;
+}
+
+.form-link:hover {
+  color: #fff;
+  background-color: rgba(0, 107, 229, 0.7);
 }
 
 /* color */
@@ -808,5 +829,29 @@ html {
 .page-item a {
   display: inline-block;
   width: 100%;
+}
+
+/* color */
+
+.form {
+  margin-top: 1.5rem;
+  margin: auto;
+}
+
+.form-submit .btn {
+  margin-top: 1.5rem;
+}
+
+.form .alert {
+  margin-top: 2rem;
+}
+
+.form-group {
+  margin-top: 7px;
+  width: 100%;
+}
+
+.form-group:first {
+  margin-top: 0 !important;
 }
 
