--- a/resources/sass/UI.scss
+++ b/resources/sass/UI.scss
@@ -18,6 +18,7 @@ html {
 	display: flex;
 	justify-content: center;
 	margin-bottom: 5rem;
+	min-height: 100vh;
 }
 
 .container {
@@ -84,10 +85,8 @@ html {
 	transition: color 0.2s linear 0.05s;
 	border-radius: 10px;
 	overflow: hidden;
+	margin-right: 2.3rem;
 
-	&:last-child {
-		margin-left: 2.3rem;
-	}
 	&::before {
 		@extend %before-effect;
 	}
@@ -102,6 +101,7 @@ html {
 		border: 2px solid $accent;
 		background: $accent;
 		color: $primary-text-light-color;
+
 		&::before {
 			@extend %before-effect;
 			transform: scaleY(0);
@@ -113,6 +113,9 @@ html {
 			}
 			color: $primary-text-color;
 		}
+	}
+	&:first-child {
+		margin-left: 0;
 	}
 }
 
@@ -276,5 +279,23 @@ html {
 @media (max-width: 445px) {
 	.container {
 		padding: 0 1rem;
+	}
+}
+
+.form-link {
+	position: absolute;
+	top: 10px;
+	right: 5px;
+	background-color: $accent;
+	color: #fff;
+	font-size: 1.2rem;
+	text-transform: uppercase;
+	padding: 15px 20px;
+	border-radius: 5px;
+	text-decoration: none;
+	transition: background-color 0.1s ease 0s;
+	&:hover {
+		color: #fff;
+		background-color: rgba($accent, 0.7);
 	}
 }
